force-app/main/default/objects/neverBounce__c/neverBounce__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>neverBounce</label>
</CustomObject>