force-app/main/default/objects/neverBounce__c/fields/ApiKey__c.field-meta.xml
<CustomField>
    <fullName>ApiKey__c</fullName>
    <label>ApiKey</label>
    <length>250</length>
    <type>Text</type>
</CustomField>