force-app/main/default/objects/neverBounce__c/fields/Emails_per_Job__c.field-meta.xml
<CustomField>
    <fullName>Emails_per_Job__c</fullName>
    <label>Emails per Job</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>