force-app/main/default/objects/neverBounce__c/fields/First_Job__c.field-meta.xml
<CustomField>
    <fullName>First_Job__c</fullName>
    <label>First Job</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>