force-app/main/default/objects/neverBounce__c/fields/next_page__c.field-meta.xml
<CustomField>
    <fullName>next_page__c</fullName>
    <defaultValue>0</defaultValue>
    <label>next page</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>