force-app/main/default/objects/neverBounce__c/fields/number_of_pages__c.field-meta.xml
<CustomField>
    <fullName>number_of_pages__c</fullName>
    <label>number of pages</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>